[improvement]: Fixed hover list window overflow issue when component was used too near the right edge of screen

--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -4,7 +4,6 @@
   position: relative;
   background-color: $surface-light;
   height: 45px;
-  padding: 0 16px;
   @include shadow();
   z-index: 2;
 }
